--- a/MainPage/templates/Group_portal/group_detail.html
+++ b/MainPage/templates/Group_portal/group_detail.html
@@ -7,6 +7,8 @@
 
 <h1>{{ group.name }}</h1>
 <p>{{ group.about }}</p>
+<br>
+<a href="{% url 'group-update' group.pk %}">Оновити групу</a>
 
 <h2>Учасники</h2>
 
