--- a/MainPage/templates/includes/header.html
+++ b/MainPage/templates/includes/header.html
@@ -4,11 +4,14 @@
             GROUP<span class="brand-dot">PORTAL</span>
         </a>
 
+
         <div class="d-flex align-items-center ms-auto order-lg-last">
+
             {% if user.is_authenticated %}
                 {# Видим только если залогинены #}
                 <span class="text-muted small me-2 d-inline-block">
                     Привіт, <span class="fw-bold text-dark">{{ user.username }}</span>
+                    <a href="{% url 'comment-list' %}">gggggggggggggggggggggggggg</a>
                 </span>
 
                 <form action="{% url 'logout' %}" method="post" class="m-0">
